# realtime-chat-app

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  docker-compose.yaml  nx.json  package-lock.json  package.json
.envs/: .env.example
api/: .dockerignore  .gitignore  Dockerfile  GEMINI.md  entrypoint.sh  package-lock.json  package.json  project.json  pyproject.toml  requirements.txt  tailwind.config.js
api/apps/accounts/: admin.py  models.py  renderers.py  serializers.py  throttling.py  urls.py  utils.py  views.py
api/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_email_alter_user_name.py  0004_alter_user_avatar.py
api/apps/chat/: admin.py  consumers.py  middleware.py  models.py  pagination.py  renderers.py  routing.py  serializers.py  sfu.py  urls.py  urls_htmx.py  views.py  views_htmx.py
api/apps/chat/migrations/: 0001_initial.py  0002_friendshipnew_delete_friendship.py  0003_message_updated_at.py  0004_message_chat_messag_chat_ro_9355cd_idx.py  0005_notification_chat_room.py  0006_message_attachment.py  (+2 more)
api/apps/htmx/: apps.py  urls.py  views.py
api/config/: asgi.py  settings.py  urls.py
api/scripts/: cors.json  entrypoint.sh
api/scripts/production/: entrypoint.sh
api/static_src/: site.webmanifest
api/static_src/css/: input.css  output.css
api/templates/: base.html
api/templates/admin/: base_site.html
api/templates/components/: chat_room_item.html  message_bubble.html  navbar.html  sidebar.html
api/templates/layouts/: app.html  auth.html  public.html
api/templates/pages/: auth.html  chat_list.html  chat_room.html  forgot_password.html  friends.html  home.html  new_chat.html  notifications.html  profile.html  settings.html
api/templates/partials/: add_friend_results.html  chat_info_panel.html  chat_list.html  chat_room_content.html  form_errors.html  form_success.html  friend_requests.html  friends_full.html  friends_list.html  messages_list.html  notification_item.html  notifications_container.html  shared_media.html  user_search_results.html  websocket_handler.html
(+88 files in other folders)
