[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "async-timeout==5.0.1",
    "attrs==24.2.0",
    "autobahn==24.4.2",
    "automat==24.8.1",
    "boto3==1.35.63",
    "botocore==1.35.63",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "channels==4.1.0",
    "channels-redis==4.2.0",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "cryptography==43.0.3",
    "daphne==4.1.2",
    "django==5.1.3",
    "django-cleanup==9.0.0",
    "django-cors-headers==4.6.0",
    "django-filter==24.3",
    "django-redis==5.4.0",
    "django-storages==1.14.4",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "google-api-core==2.23.0",
    "google-auth==2.36.0",
    "google-cloud-core==2.4.1",
    "google-cloud-storage==2.18.2",
    "google-crc32c==1.6.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.66.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "jmespath==1.0.1",
    "msgpack==1.1.0",
    "packaging==24.1",
    "pillow==11.0.0",
    "proto-plus==1.25.0",
    "protobuf==5.28.3",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pyjwt==2.9.0",
    "pyopenssl==24.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "redis==5.2.0",
    "requests==2.32.3",
    "rsa==4.9",
    "s3transfer==0.10.3",
    "service-identity==24.2.0",
    "six==1.16.0",
    "sqlparse==0.5.1",
    "tomli==2.0.2",
    "twisted==24.10.0",
    "txaio==23.1.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "uvicorn==0.32.0",
    "zope-interface==7.1.1",
    "django-htmx>=1.17.0",
    "django-widget-tweaks>=1.5.0",
    "django-ratelimit>=4.1.0",
    "httpx>=0.27.0",
]
